--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
             android:gravity="start|center"
             android:padding="5dp"
             android:textSize="16dp"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
