Electric Cycle commit

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -101,7 +101,7 @@
             <TextView
                 android:id="@+id/user_city"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:textSize="16dp"
                 android:layout_margin="10dp"
                 android:paddingLeft="15dp"
