--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,16 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Sign Up"
+        android:textSize="25dp"
+        android:textColor="@color/purple_700"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:layout_gravity="center"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -87,7 +96,7 @@
             <EditText
                 android:id="@+id/idCity"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="70dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/text_border"
                 android:textColor="@color/black"
@@ -100,44 +109,13 @@
 
     </androidx.cardview.widget.CardView>
 
-    <!--Button for getting OTP-->
-    <Button
-        android:id="@+id/idGetOtp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="Get OTP"
-        android:textAllCaps="false" />
 
-    <!--Edittext for getting otp from user-->
-    <EditText
-        android:id="@+id/idOtp"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:hint="Enter OTP"
-        android:textSize="18dp"
-        android:maxLength="6"
-        android:textColorHint="@color/text_color"
-        android:importantForAutofill="no"
-        android:inputType="number"
-        android:textColor="@color/purple_700"
-        android:background="@drawable/text_border"/>
-
-    <!--button for verifying user OTP-->
     <Button
         android:id="@+id/idVerify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Verify OTP"
+        android:layout_margin="30dp"
+        android:text="Sign Up"
         android:textAllCaps="false"
         android:layout_gravity="center"/>
 
