--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/nav_invest"
-        android:icon="@drawable/ic_contact"
+        android:icon="@drawable/invest"
         android:title="Invest" />
 
     <item
